--- a/template.yml
+++ b/template.yml
@@ -1,9 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: infrastructure for ISHOCON2
 Parameters:
-  ServiceName:
-    Type: String
-    Default: ishocon2
   CidrIpOffice:
     Type: String
     Default: '{{resolve:ssm:/ISHOCON2/Dev/Network/office-ip:1}}'
@@ -20,7 +17,7 @@ Resources:
   Ec2SecurityGroupBenchmarker:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Sub ${ServiceName}_bench
+      GroupName: !Sub ${AWS::StackName}_bench
       GroupDescription: benchmark server security group
       VpcId: !Ref VpcIdMain
       SecurityGroupIngress:
@@ -30,11 +27,11 @@ Resources:
           CidrIp: !Ref CidrIpOffice
       Tags:
         - Key: Name
-          Value: !Sub ${ServiceName}_bench
+          Value: !Sub ${AWS::StackName}_bench
   Ec2SecurityGroupApp:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Sub ${ServiceName}_app
+      GroupName: !Sub ${AWS::StackName}_app
       GroupDescription: app server security group
       VpcId: !Ref VpcIdMain
       SecurityGroupIngress:
@@ -52,7 +49,7 @@ Resources:
           CidrIp: !Ref CidrIpOffice
       Tags:
         - Key: Name
-          Value: !Sub ${ServiceName}_app
+          Value: !Sub ${AWS::StackName}_app
   Ec2InstanceBenchmarker:
     Type: AWS::EC2::Instance
     Properties:
@@ -64,7 +61,7 @@ Resources:
         - !Ref Ec2SecurityGroupBenchmarker
       Tags:
         - Key: Name
-          Value: !Sub ${ServiceName}_bench
+          Value: !Sub ${AWS::StackName}_bench
   EC2EIPBenchmarker:
     Type: AWS::EC2::EIP
     Properties:
@@ -85,7 +82,7 @@ Resources:
         - !Ref Ec2SecurityGroupApp
       Tags:
         - Key: Name
-          Value: !Sub ${ServiceName}_app
+          Value: !Sub ${AWS::StackName}_app
   EC2EIPApp:
     Type: AWS::EC2::EIP
     Properties:
